Fix build filter buttons too short

--- a/app/styles/u.css
+++ b/app/styles/u.css
@@ -252,6 +252,7 @@
 .u__build-filter-button {
 	padding: 0 var(--s-1-5) !important;
 	gap: var(--s-1);
+	min-height: 24px;
 }
 
 .u__placements {
